--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "axios": "^1.6.0",
-    "helmet": "^7.1.0"
-  },
-  "devDependencies": {
+    "helmet": "^7.1.0",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "@types/node": "^20.8.0",
+    "@types/node": "^20.8.0"
+  },
+  "devDependencies": {
     "typescript": "^5.2.2",
     "ts-node-dev": "^2.0.0"
   },
