--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "JobHarvester Team",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.12.2"
+    "axios": "^1.12.2",
+    "simple-icons": "^15.16.1"
   }
 }
