adding authentication for backend

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://your-backend-url.herokuapp.com/api/greenhouse
+REACT_APP_API_URL=https://your-backend-url.onrender.com/api/greenhouse
+REACT_APP_BACKEND_API_KEY=your_secure_backend_api_key_here
