--- a/backend/env.example
+++ b/backend/env.example
@@ -1,2 +1,4 @@
 GREENHOUSE_API_KEY=08c74138d0466463988a945a8becdeaa-9
+BACKEND_API_KEY=your_secure_backend_api_key_here
+FRONTEND_URL=https://your-frontend-url.vercel.app
 PORT=3001
