--- a/backend/package.json
+++ b/backend/package.json
@@ -10,18 +10,19 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.8.0",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.0",
-    "helmet": "^7.1.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^20.8.0"
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
